<resources>
    <string name="app_name">Chomu</string>
    <string name="assistants">Assistants</string>
    <string name="chat_with_chomu">Chat with Chomu…</string>
    <string name="chat">Chat</string>

    <string name="generate">Generate</string>
    <string name="purpose">Purpose</string>
    <string name="content_type">Content Type</string>

    <!--Result Fragment -->
    <string name="re_generate">Re Generate</string>
    <string name="result">Result</string>
    <string name="typing">Typing…</string>
    <string name="result_error">Unexpected Error Occurred, Please try again</string>

    <!--    Writing Fragment -->
    <string name="writing">Writing</string>
    <string name="topic">Topic</string>
    <string name="content_essay">Essay</string>
    <string name="content_poetry">Poetry</string>
    <string name="content_short_story">Short Story</string>
    <string name="content_novel">Novel</string>
    <string name="content_article">Article</string>
    <string name="content_technical_writing">Technical Writing</string>
    <string name="content_script_screenplay">Script/Screenplay</string>
    <string name="content_journalism">Journalism</string>
    <string name="content_letter">Letter</string>
    <string name="content_blog_post">Blog Post</string>
    <string name="content_review">Review</string>
    <string name="content_speech">Speech</string>

    <!--    Summary & Grammar Fragment -->
    <string name="summary">Summary</string>
    <string name="grammar">Grammar</string>
    <string name="summary_prompt">Type or paste your content here to generate a brief summary…</string>
    <string name="grammar_prompt">Type or paste your text here for a grammar correction…</string>

    <!--    Email Fragment -->
    <string name="email">Email</string>
    <string name="recipient_info">Recipient Info</string>
    <string name="hint_recipient_info">For Example:\n\nName: Ravish Kumar\nPosition: Senior Software Engineer\n</string>
    <string name="hint_email">Reply to: \nWe are excited to learn you\'re considering our services.\n\nThank you for contacting us at Diego\'s Appliances.\n\nWe have carefully considered all the details you provided about the number of supplies you\'ll be storing, and we\'re confident that our D103 super cool refrigerator is more than capable of meeting your needs. In addition, if you purchase the refrigerator through our website www.diegoappliances.com, you get free delivery and installation.\n\nWe hope to welcome you soon as a part of the Diego family. Do reach out if you have any more questions or need any extra information.\nThank you!</string>

    <!-- Interview Fragment -->
    <string name="interview">Interview</string>
    <string name="job_role">Job Role</string>
    <string name="topics">Topics</string>

    <string name="focus_point">Focus Point</string>
    <string name="focus_point_background_experience">Background and Experience</string>
    <string name="focus_point_career_goals">Career Goals</string>
    <string name="focus_point_company_knowledge">Company Knowledge</string>
    <string name="focus_point_technical_skills">Technical Skills</string>
    <string name="focus_point_interpersonal_skills">Interpersonal Skills</string>
    <string name="focus_point_adaptability_flexibility">Adaptability and Flexibility</string>
    <string name="focus_point_problem_solving">Problem Solving</string>
    <string name="focus_point_leadership_management">Leadership and Management</string>
    <string name="focus_point_time_management">Time Management</string>
    <string name="focus_point_teamwork_collaboration">Teamwork and Collaboration</string>

    <string name="experience">Experience</string>
    <string name="experience_internship">Internship</string>
    <string name="experience_entry_level">Entry Level</string>
    <string name="experience_intermediate">Intermediate</string>
    <string name="experience_professional">Professional</string>

    <!--    Social Fragment -->
    <string name="social">Social</string>
    <string name="content_message">Cold Message</string>
    <string name="content_text_post">Text Post</string>
    <string name="content_image_caption">Image Caption</string>
    <string name="content_link_description">Link Description</string>

    <string name="platform">Platform</string>
    <string name="platform_threads">Threads</string>
    <string name="platform_instagram">Instagram</string>
    <string name="platform_facebook">Facebook</string>
    <string name="platform_twitter">Twitter</string>
    <string name="platform_linkedin">LinkedIn</string>

    <!--  Advance Option Bottom Sheet  -->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <string name="formality">Formality</string>
    <string name="casual">👕 Casual</string>
    <string name="neutral">😐 Neutral</string>
    <string name="formal">👔 Formal</string>

    <string name="tone">Tone</string>
    <string name="tone_optimistic">😃 Optimistic</string>
    <string name="tone_worried">😟 Worried</string>
    <string name="tone_friendly">🤗 Friendly</string>
    <string name="tone_curious">🤔 Curious</string>
    <string name="tone_assertive">😎 Assertive</string>
    <string name="tone_encouraging">🥳 Encouraging</string>
    <string name="tone_surprised">😮 Surprised</string>
    <string name="tone_engaging">🫠 Engaging</string>
    <string name="tone_cooperative">🤝 Cooperative</string>

    <string name="length">Length</string>
    <string name="length_short">🐀 Short</string>
    <string name="length_medium">🐩 Medium</string>
    <string name="length_long">🦣 Long</string>

    <string name="style">Style</string>
    <string name="style_none">🙅 None</string>
    <string name="style_poetic">📜 Poetic</string>
    <string name="style_philosopher">>🤯 Philosopher</string>
    <string name="style_chef">👨‍🍳 Chef</string>
    <string name="style_explorer">🗺️ Explorer</string>
    <string name="style_scientist">🔬 Scientist</string>
    <string name="style_comedian">🤡 Comedian</string>
    <string name="style_futurist">🚀 Futurist</string>

    <!-- No Network Fragment -->
    <string name="no_network_label">No Network Connection</string>
    <string name="no_network_description">Unable to connect to the internet. Please check your network settings and try again.</string>
</resources>
