<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.InterviewFragment">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_job_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:text="@string/job_role"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_job_role"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_bar_size"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/title_space"
        android:layout_marginEnd="@dimen/white_space"
        android:background="@drawable/bg_input_text"
        android:ellipsize="end"
        android:gravity="start|center"
        android:hint="Android Developer"
        android:inputType="text"
        android:maxLength="80"
        android:maxLines="1"
        android:padding="@dimen/white_space"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey300"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_job_role"
        app:layout_constraintVertical_bias="0"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/white_space"
        android:text="@string/experience"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_job_role"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_experience"
        style="@style/Widget.Material3.ChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/title_space"
        android:layout_marginEnd="@dimen/white_space"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_experience"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Internship" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entry Level" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Intermediate" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Professional" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_focus_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/white_space"
        android:text="@string/focus_point"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_experience"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_focus_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/title_space"
        android:layout_marginEnd="@dimen/white_space"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_focus_point"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example point" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/white_space"
        android:text="@string/topics"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_focus_point"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_topic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/title_space"
        android:layout_marginEnd="@dimen/white_space"
        android:layout_marginBottom="@dimen/white_space"
        android:background="@drawable/bg_input_text"
        android:gravity="start"
        android:hint="View Lifecycle, Coroutines, MVVM"
        android:padding="@dimen/white_space"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey300"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_topic"
        app:layout_constraintVertical_bias="0"
        tools:ignore="HardcodedText" />

    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>